@@ -1,3 +1,8 @@
+Thu Oct 14 09:38:00 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+        * tests/Bug_3911_Regression_Test.cpp:
+          Wchar build fixes.
+
 Wed Oct 13 08:24:00 UTC 2010  Martin Corino  <mcorino@remedy.nl>
 
         * tests/Bug_3911_Regression_Test.cpp:
